--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -114,6 +114,7 @@
             }
 
             button{
+                margin-top: 10px;
                 padding: 10px;
                 background-color: orange;
                 border: none;
