--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,7 +3,8 @@
     height: 100px;
 
     .wrapper{
-        max-width: 1366px;
+        max-width: 100%;
+        padding: 0 4.5rem;
         margin: auto;
         display: flex;
         align-items: center;
