--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -68,6 +68,7 @@
                 flex-direction: column;
                 gap: 30px;
                 @include mobile{
+                    z-index: 2;
                     transform: none !important;
                     padding: 10px;
                     align-items: center;
